--- a/source_react/package.json
+++ b/source_react/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://skoob13.github.io/react-masonry-infinite",
   "dependencies": {
+    "cors": "^2.8.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-masonry-infinite": "^1.2.2",
